Fix issue with display on mobile, increased margin

--- a/css/style.css
+++ b/css/style.css
@@ -99,4 +99,7 @@ footer a:hover {
     #hero-section {
         margin: 15px;
     }
+    #hero-section {
+        margin-top: 3rem;
+    }
 }
